Sync all content

--- a/content/resources/11-225f06-th.md
+++ b/content/resources/11-225f06-th.md
@@ -10,6 +10,7 @@ image_metadata:
   credit: ''
   image-alt: Photograph of pen and computer keyboard.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 11-225f06-th.jpg
