--- a/content/resources/11-225f06.md
+++ b/content/resources/11-225f06.md
@@ -12,10 +12,10 @@ image_metadata:
   credit: ''
   image-alt: Photograph of pen and computer keyboard.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 11-225f06.jpg
 uid: 1f977ee8-7736-2403-9018-2c8ef64f3485
 ---
 This course encourages students to explore different methods and modes of writing and communicating to find what works best for them. (Image courtesy of Flickr. Photo taken by smurflord.)
-
