--- a/content/resources/11-225f06-th.md
+++ b/content/resources/11-225f06-th.md
@@ -2,11 +2,12 @@
 content_type: resource
 description: ''
 file: /courses/11-225-argumentation-and-communication-fall-2006/7114818c1e7d5a56010f5fea36d08ae7_11-225f06-th.jpg
+file_size: 7260
 file_type: image/jpeg
 image_metadata:
   caption: This course encourages students to explore different methods and modes
     of writing and communicating to find what works best for them. (Photo by smurflord
-    on [Flickr](http://www.flickr.com/).)
+    on {{% resource_link "39601ebc-1fef-44c3-a768-32aa0e4452f4" "Flickr" %}}.)
   credit: ''
   image-alt: Photograph of pen and computer keyboard.
 learning_resource_types: []
