--- a/content/resources/11-225f06.md
+++ b/content/resources/11-225f06.md
@@ -4,11 +4,12 @@ description: This course encourages students to explore different methods and mo
   of writing and communicating to find what works best for them. (Image courtesy of
   Flickr. Photo taken by smurflord.)
 file: /courses/11-225-argumentation-and-communication-fall-2006/1f977ee87736240390182c8ef64f3485_11-225f06.jpg
+file_size: 49959
 file_type: image/jpeg
 image_metadata:
   caption: This course encourages students to explore different methods and modes
     of writing and communicating to find what works best for them. (Photo by smurflord
-    on [Flickr](http://www.flickr.com/).)
+    on {{% resource_link "39601ebc-1fef-44c3-a768-32aa0e4452f4" "Flickr" %}}.)
   credit: ''
   image-alt: Photograph of pen and computer keyboard.
 learning_resource_types: []
