--- a/content/resources/11-225f06.md
+++ b/content/resources/11-225f06.md
@@ -9,7 +9,7 @@ file_type: image/jpeg
 image_metadata:
   caption: This course encourages students to explore different methods and modes
     of writing and communicating to find what works best for them. (Photo by smurflord
-    on {{% resource_link "39601ebc-1fef-44c3-a768-32aa0e4452f4" "Flickr" %}}.)
+    on [Flickr](http://www.flickr.com/).)
   credit: ''
   image-alt: Photograph of pen and computer keyboard.
 learning_resource_types: []
