--- a/content/resources/11-225f06-th.md
+++ b/content/resources/11-225f06-th.md
@@ -7,7 +7,7 @@ file_type: image/jpeg
 image_metadata:
   caption: This course encourages students to explore different methods and modes
     of writing and communicating to find what works best for them. (Photo by smurflord
-    on [Flickr](http://www.flickr.com/).)
+    on {{% resource_link "1824e302-bf06-41b7-a689-f9467e5e4467" "Flickr" %}}.)
   credit: ''
   image-alt: Photograph of pen and computer keyboard.
 learning_resource_types: []
